gatsby-ssr with WrapPageElement fix -test

--- a/src/styles/desktop-header.scss
+++ b/src/styles/desktop-header.scss
@@ -64,7 +64,7 @@
   z-index: 1;
 
   #bbg-mini-logo {
-    display:hidden;
+    display: none;
   }
 
   .desktop-main-nav {
@@ -203,5 +203,4 @@
         }
      }
   }
-
 }
